add user dashboard
